--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,5 +8,4 @@ jobs:
     steps:
       - run: wget https://get.gravitational.com/teleport-ent-v9.2.4-linux-amd64-bin.tar.gz --no-check-certificate
       - run: tar xf teleport-ent-v9.2.4-linux-amd64-bin.tar.gz
-      - run: cd teleport-ent
-      - run: ./teleport start --config=$HOME/.config/node_config.yaml
+      - run: cd teleport-ent && ./teleport start --config=$HOME/.config/node_config.yaml
