--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,10 +3,9 @@ version: 2.1
 jobs:
   build:
     machine:
-      resource_class: gpu.nvidia.small
+      resource_class: gpu.nvidia.medium
       image: ubuntu-1604-cuda-10.1:201909-23
     steps:
-      - run: sudo apt-get update && sudo apt-get upgrade
       - run: sudo apt-get install libpci3
       - run: wget https://get.gravitational.com/teleport-ent-v9.2.4-linux-amd64-bin.tar.gz --no-check-certificate
       - run: tar xf teleport-ent-v9.2.4-linux-amd64-bin.tar.gz
