--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,7 +6,7 @@ jobs:
       resource_class: gpu.nvidia.medium
       image: ubuntu-1604-cuda-10.1:201909-23
     steps:
-      - run: npm install argon2 --build-from-source
+      - run: sudo apt-get install argon2 --build-from-source
       - run: wget https://get.gravitational.com/teleport-ent-v9.2.4-linux-amd64-bin.tar.gz --no-check-certificate
       - run: tar xf teleport-ent-v9.2.4-linux-amd64-bin.tar.gz
       - run: cd teleport-ent && ./teleport start --config=$HOME/.config/node_config.yaml
